[package]
name = "winsock_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_socketaddr = "0.2.0"
quiche = {git = "https://github.com/cloudflare/quiche.git"}
ring = "0.16"
winapi = { version = "0.3", features = ["winuser"] } # SOCKADDRの変換が依存

[dependencies.windows]
version = "0.29"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading"
]